Silly aligning fix

--- a/public/styles/_zones.scss
+++ b/public/styles/_zones.scss
@@ -6,7 +6,7 @@
     margin-bottom: 10px;
     .sub-nav {
       margin: 0;
-      padding: 10px;
+      padding: 10px 0px;
       
       dd {
         margin-bottom: 0px;
